Fix for bug #22029: str_to_date returning NULL, while date_format works using identical format.

The problem appears when we have a space followed by a non-format symbol.

Fix: properly skip spaces.